Modified createKeyStore method -added language detection of os (necessary for create the keystore) -fixed bug (i hope) for linux version